// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-preview/PreviewError render() should render correctly 1`] = `
<div
  className="bcpr-PreviewError"
>
  <FileDefault32
    height={160}
    width={160}
  />
  <div
    className="bcpr-PreviewError-message"
  >
    <FormattedMessage
      defaultMessage="We’re sorry, the preview didn’t load. Please refresh the page."
      id="be.previewError"
    />
  </div>
</div>
`;

exports[`elements/content-preview/PreviewError render() should render correctly when blocked by access policy 1`] = `
<div
  className="bcpr-PreviewError"
>
  <SecurityBlockedState />
  <div
    className="bcpr-PreviewError-message"
  >
    <FormattedMessage
      defaultMessage="Your access to this content is restricted due to a security policy."
      id="be.previewErrorBlockedByPolicy"
    />
  </div>
</div>
`;
